[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-template"
version = "0.1.0"
description = "Minimal LangGraph 1.x starter template"
readme = "README.md"
license = "0BSD"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.2,<2",
    "langchain>=1,<2",           # init_chat_model (provider-agnostic factory)
    "langchain-core>=1.4,<2",
    "langchain-openai>=1.3,<2",  # default provider; swap/add others freely
    "python-dotenv>=1.2,<2",
]

[project.optional-dependencies]
# Model providers: OpenAI ships in the base dependencies (it is the
# default); install extras for the others, e.g. pip install -e ".[anthropic]"
# then set MODEL_NAME (see .env.example). The provider table lives in
# main.py (_PROVIDERS) — add new providers there too.
anthropic = ["langchain-anthropic>=1,<2"]
google = ["langchain-google-genai>=4,<5"]
ollama = ["langchain-ollama>=1,<2"]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "langgraph-cli[inmem]>=0.2",        # `langgraph dev` / Studio
    "langgraph-checkpoint-sqlite>=3",   # durable CLI sessions (--db flag)
]

[tool.setuptools]
packages = ["app", "app.agents"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["app", "examples", "fakes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
